Code cleaning, utilisation de records